--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+# config/routes.yaml
+
+index:
+    path: /
+    controller: App\Controller\DefaultController::index
+    
+
+wild_show_index:
+    path: /wild/
+    controller: App\Controller\WildController::index
